# SF4-Netplay-Launcher-SPK

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  preflight.cmd  vcpkg.json
.github/workflows/: release-windows.yml
cmake/: sf4e_version.cmake
contrib/: developer-gitignore  filter-repo-paths.txt
docs/: BETA_TESTERS.md  CASUAL_NETPLAY.md  CODE_SIGNING.md  DEFENDER_BINARY_COMPARISON.md  NETPLAY_INVARIANTS.md  RELEASE.md  RELEASE_NOTES_STEAM_P2P_TEST_20260531.md  RELEASE_NOTES_STEAM_P2P_TEST_20260601.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.1.md  RELEASE_NOTES_v0.2.7.2.md  RELEASE_NOTES_v0.2.7.3.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.9.2.md  RELEASE_NOTES_v0.2.9.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.3.md  SIGNPATH_APPLY.md  SMOKE_TEST.md  STEAM_P2P_EXPERIMENT.md  TEAM_QUICKSTART.md  TRANSPORT_REGRESSION.md  TROUBLESHOOTING.md  USER_NETPLAY.md  VPS_TLS_SETUP.md  WINDOWS_DEFENDER.md
launcher-ui/: app.js  icons.js  index.html  styles.css
scripts/: .vps-env.ps1.example  build-relay-wsl.sh  deploy-broker-vps.py  deploy-dashboard-vps.py  deploy-tiered-idle-vps.ps1  desktop-sf4e-helper.ps1  github-release.ps1  load-vps-env.ps1  package-steam-qt.ps1  package-team.ps1  prepare-defender-submission.ps1  prune-steam-dist.ps1  relay-diag.ps1  release-team-build.ps1  run-package-tests.ps1  setup-vps-env.ps1  test-vps-ports.py  test-wsl-build-env.sh  tester-preflight.ps1  transport-regression-test.py  update-dashboard-vps.py  vps-build-relay.py
services/room-broker/: .env.example  Caddyfile.example  README.md  install-vps-relay.sh  install-vps.sh  server.js
services/vps-relay/: CMakeLists.txt  build-linux.sh  relay-manager.js
services/vps-relay/dashboard/: .env.example  install.sh  package-lock.json  package.json  server.js
services/vps-relay/linux-shim/: d3d9.h  windows.h
src/common/: agent_debug_log.hxx  sf4e__DebugLog.hxx  sf4e__NetUtil.cxx  sf4e__NetUtil.hxx  sf4e__NetplayConfig.hxx
src/launcher/: connect_strategy.cxx  connect_strategy.hxx  github_release_client.cxx  launcher.cxx  netplay_launch_controller.cxx  netplay_launch_controller.hxx  netplay_persist.cxx  netplay_persist.hxx  netplay_room_code.cxx  netplay_room_code.hxx  netplay_wizard.cxx  netplay_wizard.hxx  relay_host_spawn.cxx  relay_host_spawn.hxx  room_broker_client.cxx  updater.cxx  webview_host.cxx  webview_host.hxx
src/launcher/netplay/: netplay_launch_controller.cxx  netplay_launch_controller.hxx  netplay_wizard.cxx
src/launcher/qt/: controller_bridge.cxx  controller_bridge.hxx  launcher_common.cxx  launcher_common.hxx  launcher_theme.cxx  launcher_theme.hxx  qt_launcher_app.cxx  relay_netplay_window.cxx  relay_netplay_window.hxx  steam_p2p_window.cxx  steam_p2p_window.hxx
src/launcher/steam/: steam_p2p_launcher.cxx  steam_p2p_launcher.hxx
src/launcher/update/: github_release_client.cxx  github_release_client.hxx
src/relay/: ggpo_udp_relay.cxx  session_relay.cxx
src/session/: interactive_test.cxx  sf4e__GgpoRelay.cxx  sf4e__GgpoRelay.hxx  sf4e__GgpoTransport.cxx  sf4e__GgpoTransport.hxx  sf4e__SessionClient.cxx  sf4e__SessionClient.hxx  sf4e__SessionProtocol.cxx  sf4e__SessionProtocol.hxx  sf4e__SessionServer.cxx  sf4e__SessionServer.hxx  sf4e__SteamP2pSession.cxx
src/sf4e/: sf4e.cxx  sf4e.hxx  sf4e__GameEvents.cxx  sf4e__Game__Battle__System.cxx  sf4e__Game__Battle__System.hxx  sf4e__NetplayFacade.cxx  sf4e__NetplayFacade.hxx  sf4e__Overlay.cxx  sf4e__Overlay.hxx  sf4e__Platform.cxx  sf4e__UserApp.cxx  sf4e__UserApp.hxx
src/steam_experiment/: steam_p2p_payload.cxx  steam_p2p_payload.hxx
